# trading-bot-devin-demo

./: .codex_issue_101.md  .codex_issue_102.md  .codex_issue_105.md  .codex_issue_62.md  .codex_issue_63.md  .codex_issue_64.md  .codex_issue_66.md  .codex_issue_67.md  .codex_issue_68.md  .codex_issue_69.md  .codex_issue_70.md  .codex_issue_71.md  .codex_issue_72.md  .codex_issue_73.md  .codex_issue_74.md  .codex_issue_75.md  .codex_issue_76.md  .codex_issue_95.md  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  config.json  dashboard.py  dev_setup.sh  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  signals.db
.github/: pull_request_template.md
.streamlit/: config.toml
dashboard/: utils.py
docs/: adding_strategy.md  dashboard.md  live_trading.md
reports/: simulations.md
scripts/: simulate_matrix.py
strategies/: __init__.py  bollinger_strategy.py
tests/: conftest.py  test_alert_mode.py  test_async_exchange.py  test_backtester.py  test_bbands.py  test_bbands_strategy.py  test_bollinger_strategy.py  test_ccxt_spot_broker.py  test_config_layering.py  test_confluence_strategy.py  test_daily_loss_limit.py  test_data_fetch.py  test_end_to_end_integration.py  test_error_conditions.py  test_exchange.py  test_exits.py  test_fuzz_strategies.py  test_guardrails.py  test_live_dynamic_exits.py  test_live_error_handling.py  test_live_exits.py  test_logging_config.py  test_macd.py  test_macd_strategy.py  test_main.py  test_max_position_pct.py  test_metrics.py  test_min_balance_threshold.py  test_min_trade_interval.py  (+23 more)
(+83 files in other folders)
