[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-bot"
version = "1.2.0"
description = "A cryptocurrency trading signal generator with multiple strategies (SMA, RSI, MACD, Bollinger Bands)"
readme = "README.md"
requires-python = ">=3.8"
authors = [{name = "Trading Bot Team", email = "trading-bot@example.com"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "ccxt==4.3.86",
    "pandas==2.2.2",
    "streamlit==1.38.0",
    "matplotlib==3.9.1",
    "plyer==2.1.0",
    "pydantic==2.7.4",
    "prometheus-client==0.20.0",
]

[project.urls]
"Bug Reports" = "https://github.com/ryanrodriguez8982/trading-bot-devin-demo/issues"
"Source" = "https://github.com/ryanrodriguez8982/trading-bot-devin-demo"

[project.scripts]
"trading-bot" = "trading_bot.main:main"

[tool.setuptools.packages.find]
include = ["trading_bot"]

[tool.setuptools.package-data]
"trading_bot" = ["*.json", "py.typed"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = ["E203", "E501"]
